# CorkyScab

./: README.md  corkyscab_demo.ipynb  pyproject.toml
corky_scab/: __init__.py  segmenter.py
